@@ -13,7 +13,7 @@ Maintainer: Patrick Lloyd-Smith <patrick.lloydsmith@usask.ca>
 Description: Estimates and simulates Kuhn-Tucker demand models with individual heterogeneity. The package implements the multiple-discrete continuous extreme value (MDCEV) model and the Kuhn-Tucker specification common in the environmental economics literature on recreation demand. Latent class and random parameters specifications can be implemented and the models are fit using maximum likelihood estimation or Bayesian estimation. All models are implemented in Stan, which is a C++ package for performing full Bayesian inference (see Stan Development Team, 2019) <http://mc-stan.org/>. The package also implements demand forecasting (Pinjari and Bhat (2011) <https://repositories.lib.utexas.edu/handle/2152/23880>) and welfare calculation (Lloyd-Smith (2018) <doi.org/10.1016/j.jocm.2017.12.002>) for policy simulation.
 License: MIT + file LICENSE
 Depends:
-    R (>= 4.0.0),
+    R (>= 3.6.0),
     Rcpp (>= 1.0.5),
     methods
 Imports:
@@ -21,8 +21,6 @@ Imports:
     rstantools (>= 2.1.1),
     RcppParallel (>= 5.0.1),
     dplyr (>= 0.7.8),
-    tidyselect,
-    stringr,
     purrr,
     tibble,
     tidyr,
